manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-task-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: delete-task
  template:
    metadata:
      name: template-pod
      labels:
        app: delete-task
    spec:
      containers:
      - name: delete-task-container
        image: practice30.azurecr.io/deletetask:v3
        ports:
        - containerPort: 8000
