manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delete-task-service
spec:
  type: ClusterIP
  selector:
    app: delete-task
  ports:
    - protocol: TCP
      port: 80  # service ka port jis par listen karega
      targetPort: 8000  #container port
